# timesheets

./: Cargo.toml  README.md
debug_data/: timesheet.tsh
examples/: timesheet.tsh
src/: cli.rs  main.rs
src/evaluator/: eval.rs  mod.rs  render.rs
src/packer/: generic_model.rs  generic_utils.rs  mod.rs  pack_trees.rs  packer.rs
src/parser/: mod.rs  packer.rs  parser.pest  parser.rs  parser_impl.rs
src/utils/: mod.rs  term_render.rs
