[package]
name = "timesheets"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
itertools = "0.13.0"
once_cell = "1.20.1"
pest = "2.7.13"
pest_derive = "2.7.13"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
lang_packer = { path = "../lang_packer"}
token_packer = { path = "../token_packer" }
